Atualização de exercícios do cap. 19

--- a/modulo III - colocando um prototipo no ar/exercicios/ex022/fundo006.html
+++ b/modulo III - colocando um prototipo no ar/exercicios/ex022/fundo006.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mudando o tamanho da imagem de fundo</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthand - background
+                color > image > position > / > repeat > size > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center top / cover no-repeat fixed;
         } 
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,7 +36,19 @@
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum, maxime repellendus. Dignissimos deleniti quam eius beatae earum eum fugiat corrupti quod illo ullam! Ullam, consequuntur distinctio ex eius nemo quaerat.
         Consectetur cumque totam nihil natus voluptate earum, rerum tempora molestias alias perspiciatis repellat, consequatur nostrum cupiditate ad debitis sit amet ipsum asperiores. Sed doloremque recusandae ut delectus cum cumque unde.
-        Qui cupiditate labore explicabo, dolores soluta odio eveniet deserunt saepe ex nisi quos! Ullam mollitia possimus corrupti debitis unde odit harum excepturi voluptatum perferendis, nisi animi voluptatibus quia voluptates. Deleniti.</p>
+        Qui cupiditate labore explicabo, dolores soluta odio eveniet deserunt saepe ex nisi quos! Ullam mollitia possimus corrupti debitis unde odit harum excepturi voluptatum perferendis, nisi animi voluptatibus quia voluptates. Deleniti.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut voluptatem id vero, reprehenderit perspiciatis quam doloribus corporis aliquid explicabo dicta quas labore laborum temporibus quis rem nisi nesciunt quae assumenda.
+        Accusamus, magnam qui obcaecati libero beatae eum natus expedita blanditiis doloribus quaerat cumque sapiente incidunt possimus recusandae praesentium accusantium delectus maxime ullam explicabo asperiores pariatur eveniet distinctio totam? Rerum, quo.
+        Voluptatibus, itaque cupiditate? Architecto vero, alias natus excepturi doloribus et, nam molestias minus, quis impedit expedita tempora delectus accusantium dolores assumenda cum. Ipsum, nostrum! Sed ipsa at ipsam error voluptatum!
+        Odio, earum consequatur? Nobis, atque labore molestias exercitationem, est neque eligendi eaque porro veniam vero officia saepe dolorem numquam doloremque ratione consequatur obcaecati ipsa mollitia! Nesciunt velit eligendi nam dignissimos!
+        Quia quae laborum natus maxime ex incidunt explicabo nulla facilis cumque? Adipisci sint consectetur ab asperiores iste voluptatibus. Tenetur, officiis dolor? Quibusdam sequi porro at ad explicabo deserunt quaerat quod.
+        Quis nam, minus eius veniam perferendis velit temporibus voluptatem repellat fugit doloremque? Placeat deleniti neque inventore assumenda repellat repudiandae doloribus sequi illum adipisci corporis omnis voluptatem, quaerat tempora autem libero?
+        Iure nisi dolorum, iusto officiis quisquam in dolorem architecto quidem dicta animi! Eius, voluptatem temporibus similique maiores eos illum pariatur ipsa obcaecati quibusdam. Dolore, magnam. Mollitia quaerat id ut architecto.
+        Dolor voluptatibus at non corporis laboriosam id nihil minima veritatis, error saepe aperiam eius deserunt harum molestiae quibusdam iste perspiciatis cum incidunt temporibus, deleniti earum inventore et? Repellendus, cum eveniet.
+        Illo incidunt ab dolorum error pariatur repudiandae laborum vitae recusandae corrupti. Corrupti, maiores debitis sunt esse dolor, a ratione nobis sapiente numquam, possimus velit? Debitis deleniti dolorem laboriosam illo nobis.
+        Fugiat animi soluta ipsum eius sit nobis vitae asperiores dolorum odit sed iure, tempora dolorem nihil nisi excepturi accusantium? Magni blanditiis perspiciatis quidem veniam voluptatibus harum beatae impedit consequuntur. Perferendis?
+        Totam sequi dolorem alias vel, maxime eaque labore assumenda, explicabo perferendis reprehenderit voluptatem optio. Accusamus dolor est delectus expedita! Officia repellendus quia fugit temporibus debitis quibusdam deleniti eveniet nam odio?
+        Voluptatibus numquam culpa minima dolorum mollitia exercitationem, fugiat ab sed. Repellat dolores sapiente, unde maiores soluta eius esse molestiae rem consectetur dolorum nam cupiditate. Unde obcaecati nesciunt assumenda tempora nam!</p>
     </main>
 </body>
 </html>
